--- a/frontend/src/features/chat/ui/ChatUI.module.scss
+++ b/frontend/src/features/chat/ui/ChatUI.module.scss
@@ -122,3 +122,10 @@
   display: flex;
   align-items: center;
 }
+
+.warningMessage {
+  margin-top: -30px;
+  margin-bottom: 20px;
+  font-size: 12px;
+  color: gray;
+}
