--- a/frontend/src/features/board/ui/MailList.module.scss
+++ b/frontend/src/features/board/ui/MailList.module.scss
@@ -70,12 +70,14 @@
 .table th,
 .table td {
   padding: 10px;
-  border: 1px solid #ddd;
+
   text-align: left;
+  border: none;
+  border-bottom: 1px solid #ddd;
 }
 
 .table th {
-  background-color: #f1f1f1;
+  background-color: #ffffff;
   font-weight: bold;
 }
 
