--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -17,6 +17,8 @@
   --sub03: #a0aec0;
   --gray02: #d7d7d7;
   --gray03: #5f6368;
+  --red01: #f57d6b;
+  --yellow01: #ffd700;
 }
 
 /* 모든 요소의 기본 마진과 패딩을 제거 */
