--- a/frontend/src/features/board/ui/DashBoard.module.scss
+++ b/frontend/src/features/board/ui/DashBoard.module.scss
@@ -21,11 +21,11 @@
   height: 15%;
   display: flex;
   flex-direction: row;
-  gap: 1rem;
+  gap: 4%;
 }
 
 .statisticbox {
-  width: 30%;
+  width: 48%;
   height: 80%;
   border-radius: 10px;
   background-color: #fff;
@@ -90,24 +90,24 @@
     font-size: 20px;
     color: var(--gray04);
   }
-
   h2 {
     font-size: 12px;
     color: var(--sub03);
   }
-  /* 테이블 전체에 글자 왼쪽 정렬 */
-  table {
-    width: 100%; /* 테이블 너비를 100%로 설정 */
-    height: 100%;
-    border-collapse: collapse; /* 테두리를 합쳐서 깔끔하게 설정 */
-    text-align: left; /* 모든 글자 왼쪽 정렬 */
-  }
+}
 
-  th,
-  td {
-    padding: 5px;
-    border-bottom: 1px solid #ddd; /* 아래쪽 테두리 */
-  }
+/* 테이블 전체에 글자 왼쪽 정렬 */
+table {
+  width: 100%; /* 테이블 너비를 100%로 설정 */
+  height: 100%;
+  border-collapse: collapse; /* 테두리를 합쳐서 깔끔하게 설정 */
+  text-align: left; /* 모든 글자 왼쪽 정렬 */
+}
+
+th,
+td {
+  padding: 5px;
+  border-bottom: 1px solid #ddd; /* 아래쪽 테두리 */
 }
 
 .middleHeader {
@@ -182,9 +182,18 @@
   background-color: #fff;
   border-radius: 15px;
   padding: 10px;
+  gap: 2rem;
+  display: flex;
+  flex-direction: column;
 
   h1 {
     @include h1style();
+  }
+
+  > div:first-child {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
   }
 }
 
@@ -202,6 +211,28 @@
   flex-wrap: wrap;
 }
 
+.barSection {
+  width: 100%;
+}
+
+.detailTop {
+  width: 100%;
+  height: 10%;
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 1rem;
+}
+
+.topHalf {
+  width: 50%;
+}
+
+.detailBottom {
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: row;
+}
 .left,
 .right {
   width: 50%;
@@ -231,11 +262,21 @@
 }
 
 .map {
-  width: 400px;
-  height: 200px;
+  width: 50%;
+  height: 400px;
   background-color: var(--gray02);
   border-radius: 15px;
 }
+
+.bottomRight {
+  width: 50%;
+  height: 400px;
+  display: flex;
+  flex-direction: row;
+  gap: 3rem;
+  justify-content: center;
+}
+
 .col {
   display: flex;
   flex-direction: column;
