Feat: 프로그레스 바 수정, 대시보드 수정

--- a/frontend/src/features/board/ui/DetailMail.module.scss
+++ b/frontend/src/features/board/ui/DetailMail.module.scss
@@ -36,10 +36,13 @@
 
       &:first-child {
         // 첫 번째 h1에만 적용
-        border-radius: 10px;
-        width: auto;
+        border-radius: 20px;
+        width: 80px;
         padding-left: 1rem;
         padding-right: 1rem;
+        color: white;
+        display: flex;
+        justify-content: center;
       }
     }
     display: flex;
