--- a/frontend/src/features/dashboard/ui/DashBoard.module.scss
+++ b/frontend/src/features/dashboard/ui/DashBoard.module.scss
@@ -14,11 +14,41 @@
   display: flex;
   flex-direction: column;
   gap: 10px;
+  transition: height 0.3s ease;
+
+  &.withDetail {
+    .top,
+    .middle {
+      flex: 1; // 높이를 균등하게 분배
+    }
+  }
+
+  .top {
+    flex: 2; // 기본적으로 더 많은 공간을 차지
+    transition: flex 0.3s ease;
+  }
+
+  .middle {
+    flex: 3; // 기본적으로 더 많은 공간을 차지
+    transition: flex 0.3s ease;
+  }
+
+  .bottom {
+    flex: 0; // 기본적으로 높이를 차지하지 않음
+    transition: flex 0.3s ease;
+    overflow: hidden; // 높이 변경 시 콘텐츠가 넘치지 않게 숨김
+  }
+}
+
+// .withDetail 클래스가 추가되었을 때
+.withDetail {
+  .bottom {
+    flex: 1; // 하단 섹션이 생기면 공간을 차지하도록 설정
+  }
 }
 
 .top {
   width: 100%;
-  height: 15%;
   display: flex;
   flex-direction: row;
   gap: 4%;
@@ -80,7 +110,7 @@
 }
 
 .middle {
-  height: 40%; /* 기본 높이 */
+  // height: 40%; /* 기본 높이 */
   transition: height 0.3s ease; /* 높이 변경 시 애니메이션 추가 */
 }
 
@@ -189,7 +219,7 @@ td {
 
 .bottom {
   width: 100%;
-  height: auto;
+  // height: auto;
 
   h1 {
     font-size: 20px;
