--- a/frontend/src/features/dashboard/ui/DashBoard.module.scss
+++ b/frontend/src/features/dashboard/ui/DashBoard.module.scss
@@ -318,7 +318,7 @@ td {
   // padding: 2%;
   height: 400px;
   // background-color: var(--gray02);
-  border: 1px solid black;
+  // border: 1px solid black;
   border-radius: 15px;
 }
 
@@ -339,7 +339,13 @@ td {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  align-items: center;
+  align-items: start;
+  gap: 1rem;
+  > .col {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
 }
 
 .camera {
@@ -353,6 +359,9 @@ td {
     background-color: #ddd;
     border-radius: 15px;
     height: 90%;
+  }
+  > h2 {
+    font-size: 16px;
   }
 }
 
@@ -370,11 +379,19 @@ td {
     width: 100%;
     height: 100px;
     background-color: var(--primary);
-    font-size: 32px;
+    font-size: 16px;
     display: flex;
     justify-content: center;
     align-items: center;
     color: #fff;
     border-radius: 10px;
   }
+}
+
+.open {
+  background-color: var(--boxopened);
+}
+
+.closed {
+  background-color: var(--boxclosed);
 }
