--- a/frontend/src/features/tooltip/ui/Tooltip.module.scss
+++ b/frontend/src/features/tooltip/ui/Tooltip.module.scss
@@ -7,7 +7,7 @@
   position: absolute;
   background-color: #333333;
   color: #fff;
-  padding: 15px;
+  padding: 25px;
   border-radius: 5px;
   font-size: 24px;
   z-index: 10;
@@ -42,8 +42,6 @@
 }
 
 .tooltip.right {
-  top: 50%;
-  left: 100%;
-  transform: translateY(-50%);
-  margin-left: 10px;
+  right: 50%;
+  margin-right: 10px;
 }
