Feat: 아직 미완코드- progress bar 수정, 카메라 연결

--- a/frontend/src/features/dashboard/ui/DashBoard.module.scss
+++ b/frontend/src/features/dashboard/ui/DashBoard.module.scss
@@ -368,8 +368,9 @@ td {
   }
   > div {
     background-color: #ddd;
-    border-radius: 15px;
     height: 100%;
+    width: 100%;
+    border-radius: 15px;
   }
   > h2 {
     font-size: 16px;
