--- a/frontend/src/features/chat/ui/ChatUI.module.scss
+++ b/frontend/src/features/chat/ui/ChatUI.module.scss
@@ -35,6 +35,7 @@
   display: flex;
   flex-grow: 1;
   overflow-y: auto;
+  overflow-x: hidden;
   width: 55vw;
   flex-direction: column;
   padding: 20px;
